--- a/src/components/common/input-file/input-file.html
+++ b/src/components/common/input-file/input-file.html
@@ -1,4 +1,7 @@
-<div class="input-file-wrapper" :class="error && 'error'">
+<div
+  class="input-file-wrapper"
+  :class="[error && 'error', disabled && 'disabled']"
+>
   <input
     type="file"
     :id="id"
@@ -8,6 +11,7 @@
     autocomplete="off"
     v-bind="$attrs"
     multiple
+    :disabled="disabled"
   />
   <span v-if="error">{{errorText}}</span>
   <!-- <div v-for="file in fileList" class="image-list">{{file.name}}</div> -->
