--- a/src/components/post-list/post-list.html
+++ b/src/components/post-list/post-list.html
@@ -1,57 +1,101 @@
-<div class="post-list-wrapper container-fluid mb-5 pb-5" :class="listView && 'list-view'">
+<div
+  class="post-list-wrapper container-fluid mb-5 pb-5"
+  :class="listView && 'list-view'"
+>
   <div class="row">
     <div class="col-12">
       <div class="container">
-          <div class="row latest-posts">
-            <div class="col-12 px-lg-0 px-3 py-2 my-3 heading-wrapper" :class="listView ? 'mt-lg-5 mb-lg-4' : 'my-lg-5'">
-              <h3 class="heading" v-html="title"></h3>
-              <div class="right-column">
-                <!-- prettier-ignore -->
-                <Button type="hollow small" text="Clear Filter" @click="clearFilter" v-if="isFilter" class="mr-3" />
-                <div class="sort-wrapper" title="Sort Options">
-                  <font-awesome-icon :icon="['fas', 'sort']" @click="sortToggle" />
-                  <Sort :data="postData"  @close="sortToggle"  v-if="sortEnabled" />
-                  <div class="overlay" @click="sortToggle" v-if="sortEnabled"></div>
-                </div>
-                <div class="filter-wrapper" title="Filter Options">
-                  <font-awesome-icon :icon="['fas', 'sliders-h']" @click="filterToggle" />
-                  <PostFilter :data="postData"  @close="filterToggle" @filteredData="updatePostData($event)" v-if="filterEnabled" />
-                </div>
-                <div class="view-wrapper">
-                  <span :class="!listView && 'active'" @click="viewToggle('grid')" title="Grid View">
-                    <font-awesome-icon :icon="['fas', 'grip-horizontal']" />
-                  </span>
-                  <span :class="listView && 'active'" @click="viewToggle('list')" title="List View">
-                    <font-awesome-icon :icon="['fas', 'grip-lines']" />
-                  </span>
-                </div>
+        <div class="row latest-posts">
+          <div
+            class="col-12 px-lg-0 px-3 py-2 my-3 heading-wrapper"
+            :class="listView ? 'mt-lg-5 mb-lg-4' : 'my-lg-5'"
+          >
+            <h3 class="heading" v-html="title"></h3>
+            <div class="right-column">
+              <!-- prettier-ignore -->
+              <Button type="hollow small" text="Clear Filter" @click="clearFilter" v-if="isFilter" class="mr-3" />
+              <div class="sort-wrapper" title="Sort Options">
+                <font-awesome-icon
+                  :icon="['fas', 'sort']"
+                  @click="sortToggle"
+                />
+                <Sort :data="postData" @close="sortToggle" v-if="sortEnabled" />
+                <div
+                  class="overlay"
+                  @click="sortToggle"
+                  v-if="sortEnabled"
+                ></div>
+              </div>
+              <div class="filter-wrapper" title="Filter Options">
+                <font-awesome-icon
+                  :icon="['fas', 'sliders-h']"
+                  @click="filterToggle"
+                />
+                <PostFilter
+                  :data="postData"
+                  @close="filterToggle"
+                  @filteredData="updatePostData($event)"
+                  v-if="filterEnabled"
+                />
+              </div>
+              <div class="view-wrapper">
+                <span
+                  :class="!listView && 'active'"
+                  @click="viewToggle('grid')"
+                  title="Grid View"
+                >
+                  <font-awesome-icon :icon="['fas', 'grip-horizontal']" />
+                </span>
+                <span
+                  :class="listView && 'active'"
+                  @click="viewToggle('list')"
+                  title="List View"
+                >
+                  <font-awesome-icon :icon="['fas', 'grip-lines']" />
+                </span>
               </div>
             </div>
-            <section class="col-12 d-flex p-0 flex-wrap" v-if="postData && postData.length">
-            <div :class="listView ? 'col-12 py-3 px-0' : 'col-4 col-md-3 p-0'" v-for="post in postData">
+          </div>
+          <section
+            class="col-12 d-flex p-0 flex-wrap"
+            v-if="postData && postData.length"
+          >
+            <div
+              :class="listView ? 'col-12 py-3 px-0' : 'col-4 col-md-3 p-0'"
+              v-for="post in postData"
+            >
               <div
                 class="card"
                 :class="Boolean(Number(post.featured)) && 'featured'"
                 @click="listView ? '' : viewPostDetails(post)"
               >
-              <div class="thumb-wrapper">
-                <Carousel
-                  id="post-list-carousel"
-                  :per-page="1"
-                  :navigationEnabled="true"
-                  easing="ease-out"
-                  class="post-list-carousel"
-                >
-                  <Slide
-                    v-for="(image, index) in post.gallery.split(',')"
-                    v-bind:key="index"
+                <div class="thumb-wrapper">
+                  <Carousel
+                    id="post-list-carousel"
+                    :per-page="1"
+                    :navigationEnabled="true"
+                    easing="ease-out"
+                    class="post-list-carousel"
                   >
-                    <span class="gallery-counter">{{index+1}}/{{post.gallery.split(',').length}}</span>
-                    <img :src="getGalleryImagePath(image,post.imageFolder)" class="img-fluid" />
-                  </Slide>
-                </Carousel>
-                <img :src="getGalleryImagePath(post.thumb,post.imageFolder)" class="img-fluid post-list-image" @click="listView ? viewPostDetails(post) : ''" />
-              </div>
+                    <Slide
+                      v-for="(image, index) in post.gallery.split(',')"
+                      v-bind:key="index"
+                    >
+                      <span class="gallery-counter"
+                        >{{index+1}}/{{post.gallery.split(',').length}}</span
+                      >
+                      <img
+                        :src="getGalleryImagePath(image,post.imageFolder)"
+                        class="img-fluid"
+                      />
+                    </Slide>
+                  </Carousel>
+                  <img
+                    :src="getGalleryImagePath(post.thumb,post.imageFolder)"
+                    class="img-fluid post-list-image"
+                    @click="listView ? viewPostDetails(post) : ''"
+                  />
+                </div>
                 <div class="post-details">
                   <div @click="listView ? viewPostDetails(post) : ''">
                     <p class="grid-hide list-view-price">
@@ -59,23 +103,37 @@
                         <em>Selling Price</em>
                         <span>AED {{ post.price }}</span>
                       </span>
-                      <span class="date"><font-awesome-icon :icon="['far', 'calendar-alt']" class="mr-1" /> {{post.date}}</span></p>
-                    <h5
-                      class="my-2"
-                      :title="`${getTitle(post)}`"
-                    >
-                      <span
-                        >{{getTitle(post)}}</span
+                      <span class="date"
+                        ><font-awesome-icon
+                          :icon="['far', 'calendar-alt']"
+                          class="mr-1"
+                        />
+                        {{post.date}}</span
                       >
+                    </p>
+                    <h5 class="my-2" :title="`${getTitle(post)}`">
+                      <span>{{getTitle(post)}}</span>
                       <em></em>
                     </h5>
                     <p class="grid-hide desc">{{post.desc}}</p>
                     <div class="distance-price">
                       <p class="distance">
-                        <span><img src="../../assets/distance.png" v-if="listView" /> {{ formatDistance(post.distance, 3) }} kms</span
+                        <span
+                          ><img
+                            src="../../assets/distance.png"
+                            v-if="listView"
+                          />
+                          {{ formatDistance(post.distance ? post.distance :
+                          post.kilometers, 3) }} kms</span
                         ><em></em>
                       </p>
-                      <p class="price"><em></em> <span>{{listView ? 'Price: ' : ''}}AED {{ post.price }}</span></p>
+                      <p class="price">
+                        <em></em>
+                        <span
+                          >{{listView ? 'Price: ' : ''}}AED {{ post.price
+                          }}</span
+                        >
+                      </p>
                     </div>
                   </div>
                   <div class="phone px-lg-0 mt-2 grid-hide">
@@ -119,13 +177,14 @@
               <Button type="hollow" width="100%" text="Load More" @click="loadMore" />
             </div>
           </section>
-          <div v-else class="col-12 d-flex flex-column justify-content-center align-items-center no-result">
+          <div
+            v-else
+            class="col-12 d-flex flex-column justify-content-center align-items-center no-result"
+          >
             <img src="../../assets/no-results.png" class="img-fluid" />
             <h6>No Results Found</h6>
             <p class="my-2">try changing the filters or search term</p>
           </div>
-          </div>
-          
         </div>
       </div>
     </div>
