--- a/src/views/my-ads/my-ads.html
+++ b/src/views/my-ads/my-ads.html
@@ -67,7 +67,7 @@
               <!-- prettier-ignore -->
               <Button v-if="Boolean(Number(ad.approved))" type="small hollow" text="View" @click="viewAd(ad.id)" class="mr-2" />
               <!-- prettier-ignore -->
-              <Button type="small" text="Edit" @click="editAd(ad.id)" class="mr-2" />
+              <Button v-if="Boolean(Number(ad.approved))" type="small" text="Edit" @click="editAd(ad.id)" class="mr-2" />
               <!-- prettier-ignore -->
               <Button type="red small" text="Delete" @click="deleteAd(ad.id)" class="mr-2" />
             </td>
