Rental/Lease/Spare edit front end

--- a/src/components/classifieds-form/accessories-and-parts/accessories-and-parts.html
+++ b/src/components/classifieds-form/accessories-and-parts/accessories-and-parts.html
@@ -126,7 +126,7 @@
   <div class="col-12 mb-3">
     <label>
       Upload 10 gallery images (Minimum of 1 image)
-      <span>*</span>
+      <span>*</span> <em v-if="action==='edit'">(Images will be replaced)</em>
     </label>
     <!-- prettier-ignore -->
     <InputFile class="inputText" :error="newPostValidation.galleryImages" errorText="Choose gallery images (minimum 1)"
@@ -134,7 +134,10 @@
       @value="updatePostData('galleryImages', $event)" />
   </div>
   <div class="col-12 mb-3">
-    <label>Display Picture<span>*</span></label>
+    <label
+      >Display Picture<span>*</span>
+      <em v-if="action==='edit'">(Images will be replaced)</em></label
+    >
     <!-- prettier-ignore -->
     <InputFile class="inputText" :error="newPostValidation.displayPicture" errorText="Choose a display picture"
       type="file" accept="image/*" placeholder="Select a Display picture" name="displayPicture" id="displayPicture"
