--- a/src/components/garages-form/garages-form.html
+++ b/src/components/garages-form/garages-form.html
@@ -77,7 +77,10 @@
           </div>
 
           <div class="col-12 mb-3">
-            <label>Profile Picture</label>
+            <label
+              >Profile Picture <span>*</span>
+              <em v-if="action==='edit'">(Images will be replaced)</em></label
+            >
             <!-- prettier-ignore -->
             <InputFile class="inputText" :error="newGarageValidation.profilePicture"
               errorText="Choose a Profile picture" type="file" accept="image/*" placeholder="Select a Profile picture"
@@ -86,8 +89,8 @@
           </div>
           <div class="col-12 mb-3">
             <label
-              >Upload 10 gallery images (Minimum of 1 image)
-              <span>*</span></label
+              >Upload 10 gallery images (Minimum of 1 image) <span>*</span>
+              <em v-if="action==='edit'">(Images will be replaced)</em></label
             >
             <!-- prettier-ignore -->
             <InputFile class="inputText" :error="newGarageValidation.galleryImages"
@@ -100,7 +103,7 @@
             <label>Open Times <span>*</span></label>
             <!-- prettier-ignore -->
             <OpenTimes :error="newGarageValidation.openTimes"
-            errorText="Choose timings for all days" @value="updateGarageData('openTimes', $event)" />
+            errorText="Choose timings for all days" :selectedValue="newGarage.openTimes" @value="updateGarageData('openTimes', $event)" />
           </div>
 
           <div class="col-12 mb-3">
