--- a/src/components/garages-form/garages-form.scss
+++ b/src/components/garages-form/garages-form.scss
@@ -21,6 +21,10 @@
           font-size: 12px;
         }
       }
+      em {
+        color: $red;
+        font-weight: normal;
+      }
     }
 
     .button-wrapper {
