--- a/src/components/rental-form/rental-form.scss
+++ b/src/components/rental-form/rental-form.scss
@@ -20,6 +20,10 @@
           font-size: 12px;
         }
       }
+      em {
+        color: $red;
+        font-weight: normal;
+      }
     }
 
     .button-wrapper {
