--- a/src/components/spare-parts-form/bikes/bikes.scss
+++ b/src/components/spare-parts-form/bikes/bikes.scss
@@ -1,3 +1,10 @@
 .bikes-wrapper {
- width: 100%;
+  width: 100%;
+
+  label {
+    em {
+      color: $red;
+      font-weight: normal;
+    }
+  }
 }
