--- a/src/components/spare-parts-form/cars/cars.scss
+++ b/src/components/spare-parts-form/cars/cars.scss
@@ -1,3 +1,10 @@
 .cars-wrapper {
- width: 100%;
+  width: 100%;
+
+  label {
+    em {
+      color: $red;
+      font-weight: normal;
+    }
+  }
 }
